samples/_failures_safe/1761728301_295de1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_688ca6a8.c: In function ‘main’:
./samples/SAFE/__tmp_688ca6a8.c:134:5: error: expected declaration or statement at end of input
  134 |     printf("3: Transpose\n");
      |     ^~~~~~
